--- a/src/index.css
+++ b/src/index.css
@@ -85,3 +85,22 @@ textarea:focus {
 	background-color: #ededed;
 	cursor: pointer;
 }
+.search {
+	display: flex;
+	align-items: center;
+	background-color: rgb(233, 233, 233);
+	border-radius: 10px;
+	padding: 5px;
+	margin-top: 20px;
+	margin-bottom: 1.5em;
+}
+
+.search input {
+	border: none;
+	background-color: rgb(233, 233, 233);
+	width: 100%;
+}
+
+.search input:focus {
+	outline: none;
+}
