--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ code {
 	);
 }
 .note {
-  	background-color: #fef68a;
+  	background-color: #fe8ad7;
 	border-radius: 10px;
 	padding:10px;
   margin: 10px;
